--- a/components/bio.mustache
+++ b/components/bio.mustache
@@ -36,8 +36,10 @@
     </div>
     <div class="col-xs-8 feed-panel">
         
-        <div class="place-feed">
-            <div place="post/bio"></div>
+        <div class="place-count" place="text" text="Bio"></div>
+
+        <div class="place-feed" place="feed" single="bio">
+
         </div>
     </div>
     
